fixed most of the horizontal scrollbars

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -148,7 +148,7 @@ footer {
 .meetUs {
     border-radius: 50%;
     width: 200px;
-    height: 250px;
+    height: 225px;
 }
 
 .aboutus {
